chapter04-implement-reallife-app/4.2-tcr-application/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tcr-app
  labels:
    name: tcr-app
    module: Namespace
