chapter04-implement-reallife-app/4.2-tcr-application/07-batch-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-scheduler
  namespace: tcr-app
  labels:
    name: batch-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      name: batch-scheduler
  template:
    metadata:
      labels:
        name: batch-scheduler
    spec:
      containers:
      - name: batch-scheduler
        image: 3dsinteractive/automation-technology:prd-1.0.20210118001006
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 2
        ports:
        - name: api8080
          containerPort: 8080
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
