chapter04-implement-reallife-app/4.2-tcr-application/01-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: tcr-app
  labels:
    name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: 3dsinteractive/redis:5.0
          imagePullPolicy: Always
          ports:
            - name: redis6379
              containerPort: 6379
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 300
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tcr-app
  labels:
    name: redis
spec:
  selector:
    name: redis
  ports:
  - name: redis6379
    port: 6379
    targetPort: 6379
    protocol: TCP
  clusterIP: None
