chapter04-implement-reallife-app/4.2-tcr-application/10-3rd-party-mock-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3rd-party-api
  namespace: tcr-app
  labels:
    name: 3rd-party-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      name: 3rd-party-api
  template:
    metadata:
      labels:
        name: 3rd-party-api
    spec:
      containers:
      - name: 3rd-party-api
        image: 3dsinteractive/automation-technology:prd-1.0.20210118001006
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 2
        ports:
        - name: api8080
          containerPort: 8080
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: 3rd-party-api
  namespace: tcr-app
  labels:
    name: 3rd-party-api
spec:
  selector:
    name: 3rd-party-api
  ports:
  - name: "api8080"
    port: 8080
    targetPort: 8080
    protocol: TCP
