chapter04-implement-reallife-app/4.2-tcr-application/07-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: scale-service
  labels:
    name: ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: register-api
          servicePort: 8080
